Add tags for engineers to add examples

--- a/app/views/docs/authentication-magic.phtml
+++ b/app/views/docs/authentication-magic.phtml
@@ -106,7 +106,7 @@ let user = try await account.createMagicURLSession(
     After receiving your secret from an email, you can create a session.
 </p>
 
-[TODO: Engineers, please update the examples below with how to get the secret from the magic URL]
+[TODO: @bradley, please update the examples below with how to get the secret from the magic URL]
 
 <ul class="phases clear" data-ui-phases>
     <li>
