--- a/app/views/docs/authentication-management.phtml
+++ b/app/views/docs/authentication-management.phtml
@@ -4,9 +4,9 @@
     Each user can also have their own preference object, which you can use to save preferences such as theme, language, and notification settings.
 </p>
 
-[TODO @STEVEN: TEAMS examples]
+[TODO @steven: TEAMS docs]
 
-[TODO @STEVEN: Labels]
+[TODO @steven: Labels docs]
 
 
 <h2><a href="/docs/authentication#preferences" id="preferences">User Preferences</a></h2>
