--- a/app/views/docs/authentication-sms.phtml
+++ b/app/views/docs/authentication-sms.phtml
@@ -16,7 +16,7 @@
     A <b>new account</b> will be created for this phone number if it has never been used before.
 </p>
 
-[TODO: to engineer: update these examples to show where the userID comes from (continuity from first request to next)]
+[TODO: @bradley update these examples to show where the userID comes from (continuity from first request to next)]
 
 <ul class="phases clear" data-ui-phases>
     <li>
