--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -27,7 +27,7 @@ $demos = $platform['demos'] ?? [];
 
 <p>Web platforms allow wildcard hostnames through a <span class="tag">*</span> character. The wildcard character can be applied anywhere in a hostname, both <span class="tag">*.example.com</span> and <span class="tag">prod.*.example.com</span> are valid examples. Avoid using wildcards unless necessary to keep your Appwrite project secure.</p>
 
-<?php //TODO add console ui image here ?>
+<?php //TODO add console ui image here to show where to find the platforms button ?>
 
 <h2><a href="/docs/getting-started-for-web#getSDK" id="getSDK">Get Appwrite Web SDK</a></h2>
 
