--- a/app/views/docs/authentication-email-pass.phtml
+++ b/app/views/docs/authentication-email-pass.phtml
@@ -160,7 +160,7 @@ mutation {
     In this example, the code below will be found in the page served at <code>https://example.com/verify</code>.
 </p>
 
-[TODO: Who ever: examples to parse query params from page and complete verification]
+[TODO: @bradley examples to parse query params from page and complete verification]
 
 
 <h2><a href="#login" id="login">Log In</a></h2>
@@ -457,4 +457,5 @@ let token = try await account.updateRecovery(
 </ul>
 
 <h2><a href="#security" id="security">Security</a></h2>
-[TODO: Talk about the password security features]
+[TODO: @steven Talk about the password security features like password dictionary, passowrd history, and prevent personal information.]
+[Be brief, link to security page for details]
