--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -92,7 +92,8 @@
 <h2><a href="#password-dictionary" id="password-dictionary">Password Dictionary</a></h2>
 <p>Password dictionary protects users from using bad passwords. It compares the user's password to the <a href="https://github.com/danielmiessler/SecLists/blob/master/Passwords/Common-Credentials/10k-most-common.txt">10,000</a> most common passwords and throws an error if there's a match. Together with <a href="/docs/rate-limits">rate limits</a>, password dictionary will significantly reduce the chance of a malicious actor from guessing user passwords.</p>
 
-
 <p>Password dictionary can be enabled in the Auth service's <b>Security</b> tab on the Appwrite console.</p>
 
 <h2><a href="#personal-information" id="personal-information">Personal Information</a></h2>
+
+[TODO: @steven Talk about new personal information thing.]
