Add information about environment variables that now became headers

--- a/app/views/docs/functions-develop.phtml
+++ b/app/views/docs/functions-develop.phtml
@@ -26,7 +26,7 @@
 <h2><a href="#context" id="context">The Context Object</a></h2>
 <p>
     Context is an object passed into every function to handle communication to both the end users, and logging to the Appwrite console.
-    All input, output, and logging **must be** handled through the context object passed in.
+    All input, output, anddlogging **must be** handled through the context object passed in.
 </p>
 
 <p>You'll find these properties in the context object.</p>
@@ -939,6 +939,24 @@ namespace runtime {
     If you need to pass constants or secrets to Appwrite Functions, you can use environment variables.
     Environmental variables can be global, or function specific.
 </p>
+
+<h3>Default Environment Variables</h3>
+<p>Appwrite Runtimes have some default environment variables. These are always accesible </p>
+<table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
+    <thead>
+        <tr>
+            <th style="width: 250px">Variable</th>
+            <th>Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+
 
 <h3>Local Environment Variables</h3>
 <p>
