--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -299,5 +299,8 @@ So it's important to be able to log, debug, and test your Appwrite Functions in 
         This prevents confusing errors when functions are terminated prematurely before a response is sent.
         <a href="docs/functions-develop#response">Learn about response.</a>
     </li>
+    <li>
+        Some variables about how a function was triggered are now found in the <code>context.req</code> object as <a href="/docs/functions-develop#request">headers</a>.
+    </li>
 </ol>
 
