Some minor improvements

--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -161,3 +161,7 @@
   <li class="margin-bottom-small">Select <b>Activate deployment after build</b> to use your new function.</li>
   <li class="margin-bottom-small">Click <b>Create</b> to deploy your function.</li>
 </ol>
+
+<h2><a href="#domains" id="domains">Domains</a></h2>
+
+[TODO: @matej steps to add a custom domain thanks]
