--- a/app/views/docs/functions-runtimes.phtml
+++ b/app/views/docs/functions-runtimes.phtml
@@ -15,14 +15,12 @@ $runtimes['dart-2.17']["cloud"] = true;
 
 <p>
     Appwrite Functions supports an extensive list of runtimes to meet your unique tech preferences.
-    Not all runtimes are available on Appwrite Cloud, check for the <code>Cloud</code> label in each listed runtime to know whichones are available.
+    Not all runtimes are available on Appwrite Cloud, check for the <span class="tag green">Cloud</span> label in each listed runtime to know which ones are available.
 </p>
 
 <h2><a href="/docs/functions#supportedRuntimes" id="supportedRuntimes">Supported Runtimes</a></h2>
 
-<p>Appwrite provides multiple code runtimes to execute your custom functions. Each runtime uses a Docker image tied to a specific language version to provide a safe, isolated playground to run your team's code.</p>
-
-<p>Below is a list of supported Cloud Functions runtimes. The Appwrite team continually adds support for new runtimes.</p>
+<p>Below is a list of supported Functions runtimes. The Appwrite team continually adds support for new runtimes.</p>
 
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
@@ -52,4 +50,6 @@ $runtimes['dart-2.17']["cloud"] = true;
     </tbody>
 </table>
 
-[TODO: @matej Label which ones are cloud only, idk how to do cleanly]
+<p>
+    <li class="margin-bottom"><a href="/docs/permissions" rel="noopener"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Learn more about permissions</a></li>
+</p>
