update index to have all pages

--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -96,7 +96,19 @@ $cols = [
                     <li>
                         <a href="/docs/migration"><i class="icon-right-dir"></i> Migration</a>
                         <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/migration-firebase" data-selected="/docs/migration-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/migration-firebase" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></li>
+                        </ul>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/migration-supabase" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Supabase</a></li>
+                        </ul>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/migration-nhost" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> NHost</a></li>
+                        </ul>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/migration-cloud-to-local" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Local</a></li>
+                        </ul>
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/migration-local-to-cloud" data-selected="/docs/migration"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Local to Cloud</a></li>
                         </ul>
                     </li>
                 </ul>
