--- a/app/views/docs/migration.phtml
+++ b/app/views/docs/migration.phtml
@@ -56,5 +56,6 @@
 
 <h2><a href="#limitations" id="limitations">Limitations</a></h2>
 <p>
-    - Migrations cannot transfer all data perfectly, so certain fields, such as $createdAt and $updatedAt, may not be transferred. More information can be found on the migration page for each source.
+    Migrations cannot transfer all data perfectly, so certain fields, such as <code>$createdAt</code> and <code>$updatedAt</code>, may not be transferred. 
+    More information can be found on the migration page for each source.
 </p>
