Fix ordered list tags and headings

--- a/app/views/docs/migration-nhost.phtml
+++ b/app/views/docs/migration-nhost.phtml
@@ -58,31 +58,29 @@
   </li>
 </ol>
 
-<h3><a href="#credentials" id="credentials">Migrating to Appwrite from NHost</a></h3>
-<p>
-    <ol>
-        <li>
-            Enter all the following credentials from your NHost project.
-            <ul>
-                <li>
-                    <b>Region</b> - The region your NHost project is hosted in. This can be found in your NHost project environment variables as <b>NHOST_REGION</b>.
-                </li>
-                <li>
-                    <b>Subdomain</b> - The subdomain of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_SUBDOMAIN</b>.
-                </li>
-                <li>
-                    <b>Database</b> - The name of your NHost database. This can be found in your NHost project Database settings.
-                </li>
-                <li>
-                    <b>Username</b> - The username of your NHost database. This can be found in your NHost project Database settings.
-                </li>
-                <li>
-                    <b>Password</b> - The password of your NHost database. You set this when you created your NHost project, if you don't remember it you can reset it from your NHost project Database settings.
-                </li>
-                <li>
-                  <b>Admin Secret</b> - The admin secret of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_ADMIN_SECRET</b>. We use this to transfer your NHost Files to Appwrite.
-                </li>
-            </ul>
-        </li>
-    </ol>
-</p>
+<h3><a href="#credentials" id="credentials">NHost Credentials</a></h3>
+<ol class="margin-top margin-bottom-large text-size-normal">
+    <li>
+        Enter all the following credentials from your NHost project.
+        <ul>
+            <li>
+                <b>Region</b> - The region your NHost project is hosted in. This can be found in your NHost project environment variables as <b>NHOST_REGION</b>.
+            </li>
+            <li>
+                <b>Subdomain</b> - The subdomain of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_SUBDOMAIN</b>.
+            </li>
+            <li>
+                <b>Database</b> - The name of your NHost database. This can be found in your NHost project Database settings.
+            </li>
+            <li>
+                <b>Username</b> - The username of your NHost database. This can be found in your NHost project Database settings.
+            </li>
+            <li>
+                <b>Password</b> - The password of your NHost database. You set this when you created your NHost project, if you don't remember it you can reset it from your NHost project Database settings.
+            </li>
+            <li>
+                <b>Admin Secret</b> - The admin secret of your NHost project. This can be found in your NHost project environment variables as <b>NHOST_ADMIN_SECRET</b>. We use this to transfer your NHost Files to Appwrite.
+            </li>
+        </ul>
+    </li>
+</ol>
