--- a/app/views/docs/migration-supabase.phtml
+++ b/app/views/docs/migration-supabase.phtml
@@ -58,34 +58,33 @@
   </li>
 </ol>
 
-<h3><a href="#credentials" id="credentials">Migrating to Appwrite from Supabase</a></h3>
-<p>
-    <ol>
-        <li>
-            Enter all the following credentials from your Supabase project.
-            <ul>
-                <li>
-                    <b>Region</b> - The region your Supabase project is hosted in. This can be found in your Supabase project environment variables as <b>Supabase_REGION</b>.
-                </li>
-                <li>
-                    <b>Host</b> - The host of your Supabase Database, this can be found in your Supabase project settings under <b>Database Settings</b> and <b>Host</b>.
-                </li>
-                <li>
-                    <b>Port</b> - The port of your Supabase Database, this can be found in your Supabase project settings under <b>Database Settings</b> and <b>Port</b>. By default this is <b>5432</b>.
-                </li>
-                <li>
-                    <b>Username</b> - The username of your Supabase Database, this can be found in your Supabase project settings under <b>Database Settings</b> and <b>Username</b>.
-                </li>
-                <li>
-                    <b>Password</b> - The password of your Supabase Database, this was set when you created your Supabase project. If you forgot it you can reset it within your <b>Database Settings</b>
-                </li>
-                <li>
-                    <b>Endpoint</b> - This is the endpoint of your Supabase instance under <b>Project Settings -> API</b>. This is used to migrate your files.
-                </li>
-                <li>
-                    <b>API Key</b> - This is the key of your Supabase instance under <b>Project Settings -> API</b>. This is used to migrate your files. Make sure to use the hidden <b>service_role</b> key.
-                </li>
-            </ul>
-        </li>
-    </ol>
-</p>
+<h3><a href="#credentials" id="credentials">Credentials</a></h3>
+
+<ol class="margin-top margin-bottom-large text-size-normal">
+    <li>
+        Enter all the following credentials from your Supabase project.
+        <ul>
+            <li>
+                <b>Region</b> - The region your Supabase project is hosted in. This can be found in your Supabase project environment variables as <b>Supabase_REGION</b>.
+            </li>
+            <li>
+                <b>Host</b> - The host of your Supabase Database, this can be found in your Supabase project settings under <b>Database Settings</b> and <b>Host</b>.
+            </li>
+            <li>
+                <b>Port</b> - The port of your Supabase Database, this can be found in your Supabase project settings under <b>Database Settings</b> and <b>Port</b>. By default this is <b>5432</b>.
+            </li>
+            <li>
+                <b>Username</b> - The username of your Supabase Database, this can be found in your Supabase project settings under <b>Database Settings</b> and <b>Username</b>.
+            </li>
+            <li>
+                <b>Password</b> - The password of your Supabase Database, this was set when you created your Supabase project. If you forgot it you can reset it within your <b>Database Settings</b>
+            </li>
+            <li>
+                <b>Endpoint</b> - This is the endpoint of your Supabase instance under <b>Project Settings -> API</b>. This is used to migrate your files.
+            </li>
+            <li>
+                <b>API Key</b> - This is the key of your Supabase instance under <b>Project Settings -> API</b>. This is used to migrate your files. Make sure to use the hidden <b>service_role</b> key.
+            </li>
+        </ul>
+    </li>
+</ol>
